--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <nav>
       <ul>
-        <li>
-          <a href="index.html">Home</a>
-          <a href="index.html">Nature</a>
-          <a href="index.html">Buildings</a>
-          <a href="index.html">People</a>
-          <a href="index.html">Obstract</a>
-        </li>
+
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html">Nature</a></li>
+          <li><a href="index.html">Buildings</a></li>
+          <li><a href="index.html">People</a></li>
+          <li><a href="index.html">Obstract</a></li>
+
       </ul>
     </nav>
 
